--- a/public/css/css.css
+++ b/public/css/css.css
@@ -49,7 +49,7 @@ h1 {
 /* Scrollable Chat Box */
 .chat-box {
   display: flex;
-  overflow-y: auto;
+  overflow-y: scroll;
   flex-direction: column;
   gap: 10px;
   width: 100%;
@@ -58,35 +58,8 @@ h1 {
   max-height: 500px;
   background-color: rgba(255, 102, 0, 0.2);
   border-radius: 10px;
-  border: 2px solid rgb(221, 86, 7);
+  border: 2px solid rgba(221, 86, 7, 0.349);
   padding: 15px;
-}
-
-/* Messages */
-#messages {
-  text-align: left;
-  background: rgba(0, 0, 0, 0.6);
-  border-radius: 10px;
-  padding: 15px;
-  width: 100%;
-  height: auto;
-  min-height: 250px;
-  max-height: 400px;
-  overflow-y: auto;
-  box-shadow: 0 0 10px rgb(221, 86, 7);
-  font-size: 1em;
-  color: #ddd;
-}
-
-#messages div {
-  padding: 8px;
-  border-radius: 5px;
-  background: rgba(0, 255, 255, 0.1);
-  transition: background 0.3s;
-}
-
-#messages div:hover {
-  background: rgba(0, 255, 255, 0.3);
 }
 
 /* Message Input Area */
@@ -129,13 +102,23 @@ button:hover {
   background: rgb(173, 67, 5);
 }
 
+.online{
+  margin-top: 15px;
+  display: flex;
+  color: yellowgreen;
+  gap: 10px;
+  width: 100%;
+  max-width: 500px;
+  
+}
+
 /* Responsive Styles */
 @media (max-width: 600px) {
   h1 {
       font-size: 2em;
   }
 
-  .chat-box {
+  .chat-box, .online {
       min-height: 250px;
       max-height: 400px;
   }
@@ -165,7 +148,7 @@ button:hover {
       font-size: 1.5em;
   }
 
-  .chat-box {
+  .chat-box, .online {
       min-height: 200px;
   }
 
@@ -174,3 +157,26 @@ button:hover {
       font-size: 0.9em;
   }
 }
+
+*::-webkit-scrollbar {
+  width: 8px;
+  height: 8px;
+  background-color: transparent;
+  }
+  
+  *::-webkit-scrollbar-thumb {
+  background-color: rgb(94, 49, 5);
+  border-radius: 8px;
+  }
+  
+  *::-webkit-scrollbar-thumb:hover {
+  background-color: rgb(212, 96, 28);
+  }
+  
+  *::-webkit-scrollbar-button {
+  display: none;
+  }
+  
+  *::-webkit-scrollbar-corner {
+  display: none;
+  }
