--- a/public/css/css.css
+++ b/public/css/css.css
@@ -26,6 +26,18 @@ h1 {
   text-align: center;
 }
 
+#ping{
+  position:fixed;
+  top:0;
+  right:0;
+  border-left: 2px solid rgb(192, 191, 191);
+  background-color: rgb(114, 116, 115);
+  opacity: 0.8;
+  border-bottom-left-radius: 5px;
+  font-size: small;
+  padding: 5px;
+}
+
 /* Login Container */
 .login-container {
   display: flex;
